src/test/parse-fail/attr-bad-meta-2.rs
#[path =] //~ ERROR unexpected token: `]`
mod m {}
